--- a/app/home/articles-list/articles-list.component.html
+++ b/app/home/articles-list/articles-list.component.html
@@ -1,4 +1,4 @@
-<div class="div-page">
+<div class="div-page div-liste-articles">
     <div class="category-title">
         <fa-icon class="fa-fw" *ngIf="selectedCategory && selectedCategory.id==1" [icon]="faGlobe"></fa-icon>
         <fa-icon class="fa-fw" *ngIf="selectedCategory && selectedCategory.id==2" [icon]="faVolleyballBall"></fa-icon>
